# statisco-labs

./: .gitignore  README.md  shell.nix
InjectCtoPy/: README.md  extractor.py  setup.py  text.py  vectorarray.c
arr.co/: README.md  arrco.c  arrco.py  byteArrCo.py  main.py  setup.py
arr.co.allocator/: README.md  device.py  dtype.py  main.py  }
arr.co.v2/: MallocAllocator.py  README.md  main.py  main_three.py  main_two.py  matin_four.py
arr.co.v3/: fast_array.c  fast_array.h  main.py  malloc_allocator.c
but_how_numpy/: REAME.md  _example.c  another_track_arr.py  test_cffi.py  test_mmap.py  track_array.py
classoptim/: main.py
compileall_test/: main.py  warm_up_module.py
injectSimple/: completesetup.py  setup.py  simpleops.c  text.py  vectorarray.py
jmptest/: README.md  calculator  jmp_hack.c  jmp_test.py  shared_memory.cpp  shared_memory.py
loadcppclass/: main.py  point.cpp
memalloc/: README.md  main.c  memalloc.c  memalloc.h  setup.py
myalloc/: README.md  myalloc.c
new_vector_array/: completesetup.py  main.c  main.py  setup.py  text.py  vectorarray.py  vectorops.c  vectorops.h
pvm_analysis/: README.md  main.py  main2.py  main3.py
py_alloc/: helpers.py  main.py  main_2.py  main_3.py  ops_clang.py  source_code.py
pyo3_test/: Cargo.toml  pyproject.toml
pyrust-alloc/: Cargo.toml  (+2 more)
shared_memory_test_four/: CMakeLists.txt  FunctionRegistry.hpp  README.md  functions.cpp  shared_memory.hpp  shared_memory_client.py
shared_memory_test_four/include/: FunctionRegistry.hpp  shared_memory.hpp
shared_memory_test_four/src/: functions.cpp  main.cpp
(+77 files in other folders)
